seach merged, pagination implemented
