# swagger/swagger.yml
@@ -13,9 +13,15 @@ paths:
       tags:
       - cities
       description: |-
-        Получение списка всех городов.
+        Получение списка всех городов на указанном языке.
         <br>
       operationId: CityController.GetAll
+      parameters:
+      - in: header
+        name: Accept-Language
+        description: Язык для получения данных, 'ru' или 'kz'
+        required: true
+        type: string
       responses:
         "200":
           description: '"Список городов"'
@@ -61,6 +67,11 @@ paths:
         required: true
         type: integer
         format: int64
+      - in: header
+        name: Accept-Language
+        description: Язык для получения данных, 'ru' или 'kz'
+        required: true
+        type: string
       responses:
         "200":
           description: '"Информация о городе"'
@@ -109,6 +120,11 @@ paths:
         required: true
         type: integer
         format: int64
+      - in: header
+        name: Accept-Language
+        description: Язык для получения данных, 'ru' или 'kz'
+        required: true
+        type: string
       responses:
         "200":
           description: '"Информация о городе с университетами"'
@@ -128,6 +144,11 @@ paths:
       - in: query
         name: name
         description: Имя города для поиска
+        required: true
+        type: string
+      - in: header
+        name: Accept-Language
+        description: Язык для получения данных, 'ru' или 'kz'
         required: true
         type: string
       responses:
@@ -292,6 +313,175 @@ paths:
             $ref: '#/definitions/models.Quota'
         "400":
           description: '{string} string "400 некорректный ID или другая ошибка"'
+  /services/:
+    get:
+      tags:
+      - services
+      description: |-
+        Get all services
+        <br>
+      operationId: ServiceController.GetAllServices
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Service'
+        "500":
+          description: Internal server error
+    put:
+      tags:
+      - services
+      description: |-
+        Update an existing service
+        <br>
+      operationId: ServiceController.UpdateService
+      parameters:
+      - in: body
+        name: body
+        description: Service data
+        required: true
+        schema:
+          $ref: '#/definitions/models.Service'
+      responses:
+        "200":
+          description: '{string} update success!'
+        "400":
+          description: Invalid input
+    post:
+      tags:
+      - services
+      description: |-
+        Add a new service
+        <br>
+      operationId: ServiceController.AddService
+      parameters:
+      - in: body
+        name: body
+        description: Service data
+        required: true
+        schema:
+          $ref: '#/definitions/models.Service'
+      responses:
+        "200":
+          description: '{int} models.Service.Id'
+        "400":
+          description: Invalid input
+  /services/{id}:
+    get:
+      tags:
+      - services
+      description: |-
+        Get service by ID
+        <br>
+      operationId: ServiceController.GetServiceById
+      parameters:
+      - in: path
+        name: id
+        description: Service ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.Service'
+        "404":
+          description: Not found
+    delete:
+      tags:
+      - services
+      description: |-
+        Delete a service by ID
+        <br>
+      operationId: ServiceController.DeleteService
+      parameters:
+      - in: path
+        name: id
+        description: Service ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "404":
+          description: Not found
+  /services/bind/{serviceId}/{universityId}:
+    post:
+      tags:
+      - services
+      description: |-
+        Bind a service to a university
+        <br>
+      operationId: ServiceController.AddServiceToUniversity
+      parameters:
+      - in: path
+        name: serviceId
+        description: Service ID
+        required: true
+        type: integer
+        format: int64
+      - in: path
+        name: universityId
+        description: University ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{string} bind success!'
+        "400":
+          description: Invalid input
+  /services/getbyuni/{universityId}:
+    get:
+      tags:
+      - services
+      description: |-
+        Retrieve services associated with a university by its ID
+        <br>
+      operationId: ServiceController.GetServicesByUniversityId
+      parameters:
+      - in: query
+        name: universityId
+        description: University ID
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Service'
+        "400":
+          description: Invalid university ID
+  /services/search:
+    get:
+      tags:
+      - services
+      description: |-
+        Search for services by name
+        <br>
+      operationId: ServiceController.SearchServices
+      parameters:
+      - in: query
+        name: prefix
+        description: Prefix for service name
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Service'
+        "400":
+          description: Invalid input
   /specialities/:
     get:
       tags:
@@ -396,6 +586,40 @@ paths:
           description: "string\t\"Удаление успешно выполнено\""
         "400":
           description: некорректный ID или другая ошибка
+  /specialities/addPointStat/{universityId}/{specialityId}:
+    post:
+      tags:
+      - specialities
+      description: |-
+        Добавление статистики по баллам для специальности и университета.
+        <br>
+      operationId: SpecialityController.AddPointStat
+      parameters:
+      - in: path
+        name: universityId
+        description: ID университета
+        required: true
+        type: integer
+        format: int64
+      - in: path
+        name: specialityId
+        description: ID специальности
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: JSON с данными о статистике по баллам
+        required: true
+        schema:
+          $ref: '#/definitions/models.PointStat'
+      responses:
+        "200":
+          description: '"ID добавленной статистики"'
+          schema:
+            $ref: '#/definitions/map[string]int64'
+        "400":
+          description: ошибка разбора JSON или другая ошибка
   /specialities/associatePair/{speciality_id}/{subject_pair_id}:
     put:
       tags:
@@ -506,7 +730,37 @@ paths:
               $ref: '#/definitions/models.Speciality'
         "400":
           description: некорректный ID или другая ошибка
-  /specialities/search:
+  /specialities/pointstatsbyparams/{universityId}/{specialityId}:
+    get:
+      tags:
+      - specialities
+      description: |-
+        Получение статистики по баллам для специальности и университета.
+        <br>
+      operationId: SpecialityController.GetPointStatsByUniversityAndSpeciality
+      parameters:
+      - in: path
+        name: universityId
+        description: ID университета
+        required: true
+        type: integer
+        format: int64
+      - in: path
+        name: specialityId
+        description: ID специальности
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '"Список статистики по баллам"'
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.PointStat'
+        "400":
+          description: некорректный ID или другая ошибка
+  /specialities/search_by_name:
     get:
       tags:
       - specialities
@@ -930,6 +1184,64 @@ paths:
           description: "string\t\"Удаление успешно выполнено\""
         "400":
           description: некорректный ID или другая ошибка
+  /universities/assign_services/{universityId}:
+    post:
+      tags:
+      - universities
+      description: |-
+        Добавление нескольких сервисов к университету.
+        <br>
+      operationId: UniversityController.AddServicesToUniversity
+      parameters:
+      - in: path
+        name: universityId
+        description: ID университета
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: Массив ID сервисов
+        required: true
+        schema:
+          type: array
+          items:
+            format: int64
+            type: integer
+      responses:
+        "200":
+          description: "string\t\"Сервисы успешно добавлены к университету\""
+        "400":
+          description: некорректные ID или другая ошибка
+  /universities/assign_specialities/{universityId}:
+    post:
+      tags:
+      - universities
+      description: |-
+        Добавление нескольких специальностей к университету.
+        <br>
+      operationId: UniversityController.AddSpecialitiesToUniversity
+      parameters:
+      - in: path
+        name: universityId
+        description: ID университета
+        required: true
+        type: integer
+        format: int64
+      - in: body
+        name: body
+        description: Массив ID специальностей
+        required: true
+        schema:
+          type: array
+          items:
+            format: int64
+            type: integer
+      responses:
+        "200":
+          description: "string\t\"Специальности успешно добавлены к университету\""
+        "400":
+          description: некорректные ID или другая ошибка
   /universities/assign_speciality/{universityId}/{specialityId}:
     post:
       tags:
@@ -982,7 +1294,7 @@ paths:
           description: "string\t\"Город успешно назначен\""
         "400":
           description: некорректные ID или другая ошибка
-  /universities/searchfilter:
+  /universities/search:
     get:
       tags:
       - universities
@@ -1002,14 +1314,6 @@ paths:
         type: integer
         format: int64
       - in: query
-        name: has_military_dept
-        description: Наличие военной кафедры
-        type: boolean
-      - in: query
-        name: has_dormitory
-        description: Наличие общежития
-        type: boolean
-      - in: query
         name: city_id
         description: ID города
         type: integer
@@ -1018,6 +1322,11 @@ paths:
         name: speciality_ids
         description: Список специальностей в JSON формате, должны передавать массив
           с id специальнотей
+        type: string
+      - in: query
+        name: service_ids
+        description: Список сервисов в JSON формате, должны передавать массив с id
+          сервисов
         type: string
       - in: query
         name: first_subject_id
@@ -1033,39 +1342,35 @@ paths:
         name: sort
         description: Sort parameter (avg_fee_asc or avg_fee_desc)
         type: string
-      responses:
-        "200":
-          description: '"Список найденных университетов"'
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/models.University'
-        "400":
-          description: '{string} string "400 ошибка поиска или другая ошибка"'
-  /universities/searchname:
-    get:
-      tags:
-      - universities
-      description: |-
-        Поиск университетов по имени.
-        <br>
-      operationId: UniversityController.SearchUniversities
-      parameters:
       - in: query
         name: name
-        description: Имя университета для поиска
-        required: true
+        description: Название университета или его часть
         type: string
+      - in: query
+        name: study_format
+        description: Формат обучения (full_time, part_time, etc.)
+        type: string
+      - in: query
+        name: page
+        description: Номер страницы
+        type: integer
+        format: int64
+      - in: query
+        name: per_page
+        description: Количество элементов на одной странице
+        type: integer
+        format: int64
       responses:
         "200":
-          description: '"Список найденных университетов"'
+          description: '"Список найденных университетов с информацией о пагинации"'
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/models.University'
+            $ref: '#/definitions/models.SearchResult'
         "400":
           description: '{string} string "400 ошибка поиска или другая ошибка"'
 definitions:
+  Service:
+    title: Service
+    type: object
   map[string]int:
     title: map[string]int
     type: object
@@ -1084,6 +1389,10 @@ definitions:
         format: int64
       Name:
         type: string
+      NameKz:
+        type: string
+      NameRu:
+        type: string
       Universities:
         type: array
         items:
@@ -1091,6 +1400,35 @@ definitions:
       UpdatedAt:
         type: string
         format: datetime
+  models.PointStat:
+    title: PointStat
+    type: object
+    properties:
+      AnnualGrants:
+        type: integer
+        format: int64
+      CreatedAt:
+        type: string
+        format: datetime
+      Id:
+        type: integer
+        format: int64
+      MinGrantScore:
+        type: integer
+        format: int64
+      MinScore:
+        type: integer
+        format: int64
+      Speciality:
+        $ref: '#/definitions/models.Speciality'
+      University:
+        $ref: '#/definitions/models.University'
+      UpdatedAt:
+        type: string
+        format: datetime
+      Year:
+        type: integer
+        format: int64
   models.Quota:
     title: Quota
     type: object
@@ -1119,13 +1457,42 @@ definitions:
       UpdatedAt:
         type: string
         format: datetime
+  models.SearchResult:
+    title: SearchResult
+    type: object
+    properties:
+      page:
+        type: integer
+        format: int64
+      total_count:
+        type: integer
+        format: int64
+      total_pages:
+        type: integer
+        format: int64
+      universities:
+        type: array
+        items:
+          $ref: '#/definitions/models.University'
+  models.Service:
+    title: Service
+    type: object
+    properties:
+      Id:
+        type: integer
+        format: int64
+      ImageUrl:
+        type: string
+      Name:
+        type: string
+      Universities:
+        type: array
+        items:
+          $ref: '#/definitions/models.University'
   models.Speciality:
     title: Speciality
     type: object
     properties:
-      AnnualGrants:
-        type: integer
-        format: int64
       Code:
         type: string
       CreatedAt:
@@ -1136,14 +1503,12 @@ definitions:
       Id:
         type: integer
         format: int64
-      MaxScore:
-        type: integer
-        format: int64
-      MinScore:
-        type: integer
-        format: int64
       Name:
         type: string
+      PointStats:
+        type: array
+        items:
+          $ref: '#/definitions/models.PointStat'
       SubjectPair:
         $ref: '#/definitions/models.SubjectPair'
       Universities:
@@ -1166,6 +1531,10 @@ definitions:
         type: integer
         format: int64
       Name:
+        type: string
+      NameKz:
+        type: string
+      NameRu:
         type: string
       UpdatedAt:
         type: string
@@ -1197,11 +1566,19 @@ definitions:
     properties:
       Abbreviation:
         type: string
+      AbbreviationKz:
+        type: string
+      AbbreviationRu:
+        type: string
       Address:
+        type: string
+      AddressLink:
         type: string
       AverageFee:
         type: integer
         format: int64
+      CallCenterNumber:
+        type: string
       City:
         $ref: '#/definitions/models.City'
       ContactList:
@@ -1213,10 +1590,6 @@ definitions:
         format: datetime
       Description:
         type: string
-      HasDormitory:
-        type: boolean
-      HasMilitaryDept:
-        type: boolean
       Id:
         type: integer
         format: int64
@@ -1229,8 +1602,16 @@ definitions:
         type: array
         items:
           type: string
+      PointStats:
+        type: array
+        items:
+          $ref: '#/definitions/models.PointStat'
       ProfileImageUrl:
         type: string
+      Services:
+        type: array
+        items:
+          $ref: '#/definitions/models.Service'
       SocialMediaList:
         type: array
         items:
@@ -1239,39 +1620,26 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/models.Speciality'
+      StudyFormat:
+        type: string
+      StudyFormatKz:
+        type: string
+      StudyFormatRu:
+        type: string
       UniversityCode:
         type: string
       UniversityStatus:
+        type: string
+      UniversityStatusKz:
+        type: string
+      UniversityStatusRu:
         type: string
       UpdatedAt:
         type: string
         format: datetime
       Website:
         type: string
-  models.User:
-    title: User
-    type: object
-    properties:
-      CreatedAt:
-        type: string
-        format: datetime
-      FirstName:
-        type: string
-      Id:
-        type: integer
-        format: int64
-      LastName:
-        type: string
-      Password:
-        type: string
-      ProfileImageURL:
-        type: string
-      Role:
-        type: string
-      UpdatedAt:
-        type: string
-        format: datetime
-      Username:
+      WhatsAppNumber:
         type: string
 tags:
 - name: subjects
@@ -1289,3 +1657,6 @@ tags:
 - name: quotas
   description: |
     QuotaController обрабатывает запросы для работы с квотами.
+- name: services
+  description: |
+    ServiceController handles operations related to services
